[package]
name = "Haystack"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-multipart = "0.7"
futures = "0.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
futures-util = "0.3"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }

